# Ring

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  client.cpp  client_main.cpp  main.cpp  message.h  notification.hpp  server.cpp  server_main.cpp  tests_main.cpp
Tests/: ntf.cpp  sample.cpp  sample.hpp  tests.cpp
utils/: client.cpp  client.hpp  notification.cpp  notification.hpp  server.cpp  server.hpp
